--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "link-daftar-situs-slot-deposit-dana",
   "main": "./lib/link-daftar-situs-slot-deposit-dana",
-  "version": "2.6.2",
+  "version": "",
   "description": "slot deposit DANA 5000 tanpa potongan dimana aplikasi DANA tersebut telah sangat membantu para judi slot online jauh lebih berkembang ",
   "keywords": [],
   "activationCommands": {
