--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
-  {
-
-    "name": "slot--gacor-2022--pasti--wd",
-    "main": "./lib/Slot-Gacor-2022-Pasti-WD",
-    "version": "0.0.0",
-    "description": "A short description of your package",
-    "keywords": [
-    ],
-    "activationCommands": {
-      "atom-workspace": "slot--gacor-2022--pasti--w-d:toggle"
-    },
-    "repository": "https://github.com/FastLearnerDude/Slot-Gacor-2022-Pasti-WD",
-    "license": "MIT",
-    "engines": {
-      "atom": ">=1.0.0 <2.0.0"
-    },
-    "dependencies": {
-    }
-  }
+{
+  "name": "slot--gacor-2022--pasti--wd",
+  "main": "./lib/Slot-Gacor-2022-Pasti-WD",
+  "version": "2.0.1",
+  "description": "A short description of your package",
+  "keywords": [],
+  "activationCommands": {
+    "atom-workspace": "slot--gacor-2022--pasti--wd:toggle"
+  },
+  "repository": "https://github.com/FastLearnerDude/Slot-Gacor-2022-Pasti-WD",
+  "license": "MIT",
+  "engines": {
+    "atom": ">=1.0.0 <2.0.0"
+  },
+  "dependencies": {}
+}
